✨ Wekan swimlanes can be used as task source now! 🐛 fixed the edit time entry calendar popup not showing correctly

--- a/imports/ui/styles/general.scss
+++ b/imports/ui/styles/general.scss
@@ -195,6 +195,12 @@ g.chart-legend {
   display:none;
 }
 
+.dp-modal {
+  z-index: 1100;
+}
+.dp {
+  z-index: 1200;
+}
 #cal {
     margin-top: .5rem;
     .fc-event {
